# cookiecutter-volunor

./: README.md  cookiecutter.json
hooks/: pre_gen_project.py
{{ cookiecutter.project_name }}/: pyproject.toml  tox.ini
{{ cookiecutter.project_name }}/tests/commands/: test_greet.py
{{ cookiecutter.project_name }}/tests/core/: test_greet.py
{{ cookiecutter.project_name }}/{{ cookiecutter.package_name }}/: cli.py
{{ cookiecutter.project_name }}/{{ cookiecutter.package_name }}/commands/: greet.py
{{ cookiecutter.project_name }}/{{ cookiecutter.package_name }}/core/: greet.py
